pretty much done, training remaining

--- a/Transformers.ipynb
+++ b/Transformers.ipynb
@@ -1,10 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a307e59e-a9ba-4f2d-8e45-a5f7834c7e55",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "- https://www.tensorflow.org/text/tutorials/transformer\n",
+    "- https://pytorch.org/tutorials/beginner/translation_tansformer.html\n",
+    "- https://pytorch.org/docs/stable/generated/torch.nn.Transformer.html\n",
+    "- https://arxiv.org/abs/1706.03762"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2b0f3187",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -14,13 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "id": "c88d8d4b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from tqdm.notebook import tqdm\n",
     "from collections import OrderedDict"
    ]
   },
@@ -28,8 +45,19 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "b41e8987",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3.9/site-packages/torch/cuda/__init__.py:52: UserWarning: CUDA initialization: CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero. (Triggered internally at  /pytorch/c10/cuda/CUDAFunctions.cpp:109.)\n",
+      "  return torch._C._cuda_getDeviceCount() > 0\n"
+     ]
+    }
+   ],
    "source": [
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\""
    ]
@@ -45,7 +73,9 @@
   {
    "cell_type": "markdown",
    "id": "228862e3-b636-45ee-8583-66664720e1ca",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "$\\begin{equation*}\\Large\n",
     "PE_{(pos,2i)} = sin\\left(\\frac{pos}{10000^{\\frac{2i}{d_{model}}}}\\right)\n",
@@ -60,7 +90,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "5cdd1343-9e81-4957-bdf3-b36096f5b768",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def positional_encoding(max_seq_len, d_model):\n",
@@ -76,7 +108,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "14d5d6c4-c1fe-48e3-a035-76357d85728e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -127,6 +161,7 @@
    "execution_count": 6,
    "id": "55fa7e85",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -164,7 +199,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "6d5175d6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "class mha(nn.Module):  # multi headed attention\n",
@@ -218,7 +255,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "0dea63be",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# just for feed forward network in Encoder and Decoder layers\n",
@@ -239,7 +278,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "c3489d0e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "class TransformerEncoderLayer(nn.Module):\n",
@@ -262,7 +303,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "16f3ae37",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "class TransformerDecoderLayer(nn.Module):\n",
@@ -291,7 +334,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "78c5e19b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "class TransformerEncoder(nn.Module):\n",
@@ -318,7 +363,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "7b8c16d4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "class TransformerDecoder(nn.Module):\n",
@@ -345,7 +392,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "0b58d713",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "class Transformer(nn.Module):\n",
@@ -373,59 +422,58 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "e33ad17b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "src = torch.randint(0,200,(4,68)).to(device)\n",
-    "tgt = torch.randint(0,200,(4,60)).to(device)"
+    "# src = torch.randint(0,200,(4,68)).to(device)\n",
+    "# tgt = torch.randint(0,200,(4,60)).to(device)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "id": "bdbf2c1c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "model = Transformer(4000, 3000).to(device)"
+    "# model = Transformer(4000, 3000).to(device)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
    "id": "b0874623-c80f-45aa-8674-515ee01ec33a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "o = model(src, tgt)"
+    "# o = model(src, tgt)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "id": "c6fe5108-359e-44fc-8ee2-e7cdd7641c45",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([4, 60, 3000])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "o.shape"
+    "# o.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
    "id": "20f08630-f615-40fc-8fdf-e4e2af1df10c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# from torch.utils.tensorboard import SummaryWriter"
@@ -435,7 +483,9 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "567a8d71-637b-42b2-89cf-65a6b4002d64",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# writer = SummaryWriter('logs/custom_transformer')"
@@ -445,7 +495,9 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "ca049e4c-3ed5-474b-b4fc-bd4b4dee53fe",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# writer.add_graph(model, (src,tgt))\n",
@@ -462,9 +514,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "4e49be3b-c99d-4b4e-9217-c4adf513bbcf",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import torchtext\n",
@@ -480,7 +534,9 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "45c1c302-be9d-4462-bdb6-82e2954076e5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "url_base = 'https://raw.githubusercontent.com/multi30k/dataset/master/data/task1/raw/'\n",
@@ -493,7 +549,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "23cbb064-40dc-4397-9357-61e001578c9e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "train_filepaths = [extract_archive(download_from_url(url_base + url))[0] for url in train_urls]\n",
@@ -505,7 +563,9 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "ebc90d83-7045-4ebb-ba43-6683cfd4632e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -527,7 +587,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "4f423660-860c-444a-8c89-162e3d3f3fb6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "de_tokenizer = get_tokenizer('spacy', language='de_core_news_sm')\n",
@@ -536,24 +598,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 26,
    "id": "beba9675-b8dd-49f4-8e49-0212aab3ae3b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def build_vocab(filepath, tokenizer):\n",
     "    counter = Counter()\n",
     "    with io.open(filepath, encoding=\"utf8\") as f:\n",
     "        for string_ in f:\n",
-    "            counter.update(tokenizer(string_))\n",
+    "            counter.update(tokenizer(string_.rstrip(\"\\n\")))\n",
     "    return Vocab(counter, specials=['<unk>', '<pad>', '<bos>', '<eos>'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "id": "6f5292c6-83e7-41eb-aa52-6a665b6ae84b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "de_vocab = build_vocab(train_filepaths[0], de_tokenizer)\n",
@@ -562,8 +628,305 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
+   "id": "4397343e-2ca5-47fd-bf2e-243b9a508e92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 128\n",
+    "PAD_IDX = de_vocab['<pad>']\n",
+    "BOS_IDX = de_vocab['<bos>']\n",
+    "EOS_IDX = de_vocab['<eos>']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "454d415a-6d07-4609-97b4-f30aee7ced19",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def data_preprocess(filepaths):\n",
+    "    de_iter = iter(io.open(filepaths[0], encoding=\"utf8\"))\n",
+    "    en_iter = iter(io.open(filepaths[1], encoding=\"utf8\"))\n",
+    "    data = []\n",
+    "    for de_line, en_line in zip(de_iter, en_iter):\n",
+    "        de_tensor = torch.tensor([BOS_IDX] + \n",
+    "                                 [de_vocab[token] for token in de_tokenizer(de_line.rstrip(\"\\n\"))] + \n",
+    "                                 [EOS_IDX])\n",
+    "        en_tensor = torch.tensor([BOS_IDX] + \n",
+    "                                 [en_vocab[token] for token in en_tokenizer(en_line.rstrip(\"\\n\"))] + \n",
+    "                                 [EOS_IDX])\n",
+    "        data.append((de_tensor, en_tensor))\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a442bfb3-2f93-48bb-833b-f66141787a00",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "train_data = data_preprocess(train_filepaths)\n",
+    "val_data = data_preprocess(val_filepaths)\n",
+    "test_data = data_preprocess(test_filepaths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "4bb3bb0a-ac59-4301-ad02-89246aacd79d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.nn.utils.rnn import pad_sequence\n",
+    "from torch.utils.data import DataLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "7b35bca6-b62c-4141-812f-70c364b29943",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_batch(data_batch):\n",
+    "    de_batch, en_batch = [], []\n",
+    "    for (de_item, en_item) in data_batch:\n",
+    "        de_batch.append(de_item)\n",
+    "        en_batch.append(en_item)\n",
+    "    de_batch = pad_sequence(de_batch, batch_first=True, padding_value=PAD_IDX)\n",
+    "    en_batch = pad_sequence(en_batch, batch_first=True, padding_value=PAD_IDX)\n",
+    "    return de_batch, en_batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "9d6e4641-d327-452f-8c68-5ce4c2dca152",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_iter = DataLoader(train_data, batch_size=BATCH_SIZE, shuffle=True, collate_fn=generate_batch)\n",
+    "valid_iter = DataLoader(val_data,   batch_size=BATCH_SIZE, shuffle=True, collate_fn=generate_batch)\n",
+    "test_iter  = DataLoader(test_data,  batch_size=BATCH_SIZE, shuffle=True, collate_fn=generate_batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f72f49fa-3704-4394-a7c7-bdbbfe947810",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a,b = next(iter(train_iter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1eceb126-3f81-4700-9989-835800f4cf46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([128, 26]), torch.Size([128, 28]))"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.shape, b.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "895ac3ff-22ca-4046-b43c-f8343e2a1ca9",
+   "metadata": {},
+   "source": [
+    "# Masking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "9dd0f4c7-a23d-4c85-b4b8-2db60cfbfbb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def subsequent_mask(sz):\n",
+    "    mask = torch.ones((1,1,sz,sz), device=device, dtype=bool).tril()\n",
+    "    mask.logical_not_()\n",
+    "    return mask\n",
+    "\n",
+    "def mask_fill_inf(mask):\n",
+    "    return mask.float().masked_fill(mask, float('-inf'))\n",
+    "\n",
+    "def create_mask(src, tgt):    # [B, seq_len]\n",
+    "    tgt_mask = subsequent_mask(tgt.size(1))\n",
+    "    \n",
+    "    src_padding_mask = (src == PAD_IDX)[:,None,None,:]    # [B, nheads, seq_len_q, seq_len_k]\n",
+    "    tgt_padding_mask = (tgt == PAD_IDX)[:,None,None,:]    # [B, nheads, seq_len_q, seq_len_k]\n",
+    "    tgt_mask = tgt_mask.logical_or(tgt_padding_mask)      # combine mask for look ahead and tgt padding.\n",
+    "    return mask_fill_inf(src_padding_mask), mask_fill_inf(tgt_mask)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d56119e-f642-4fe5-b69c-c077cbb81a78",
+   "metadata": {},
+   "source": [
+    "# Model Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "ec46be21-af2f-45d1-aca2-9eb4bc94f404",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SRC_VOCAB_SIZE = len(de_vocab)\n",
+    "TGT_VOCAB_SIZE = len(en_vocab)\n",
+    "d_model = 512\n",
+    "nheads = 8\n",
+    "nlayers = 3\n",
+    "dp_rate = 0.1\n",
+    "activation = 'relu'\n",
+    "lr = 0.0001\n",
+    "betas = (0.9, 0.98)\n",
+    "eps = 1e-9\n",
+    "NUM_EPOCHS = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "bbfc74f2-3966-4542-b381-1fc873c5b6a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Transformer(SRC_VOCAB_SIZE, TGT_VOCAB_SIZE,\n",
+    "                    d_model, nheads, nlayers,\n",
+    "                    dp_rate, activation).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "130a0b2c-784b-4a98-86cc-9f90c8861b70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_fn = nn.CrossEntropyLoss(ignore_index=PAD_IDX)\n",
+    "\n",
+    "optimizer = torch.optim.Adam(\n",
+    "    model.parameters(), lr=lr, betas=betas, eps=eps\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "edf280d2-571c-465f-967b-cd55f51994dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_epoch(model, train_iter, optimizer):\n",
+    "    model.train()\n",
+    "    losses = 0\n",
+    "    pbar = tqdm(enumerate(train_iter))\n",
+    "    for idx, (src, tgt) in pbar:\n",
+    "        src = src.to(device)\n",
+    "        tgt = tgt.to(device)\n",
+    "        \n",
+    "        tgt_inp = tgt[:,:-1]      # give input until before the last word.\n",
+    "        tgt_out = tgt[:,1:]       # predict the last word based on input and already predicted sentence. (auto-regressive)\n",
+    "        \n",
+    "        src_mask, tgt_mask = create_mask(src,tgt)\n",
+    "        \n",
+    "        logits = model(src, tgt, src_mask, tgt_mask)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        loss = loss_fn(logits.reshape(-1, logits.size(-1)), tgt_out.reshape(-1))\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        losses+= loss.item()\n",
+    "        pbar.set_postfix({'Loss': f\"{losses/len(train_iter):.3f}\"})\n",
+    "    return losses/len(train_iter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "283d2cb0-81c1-4555-8944-d2e9e06dde7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate(model, val_iter):\n",
+    "    model.eval()\n",
+    "    losses = 0\n",
+    "    pbar = tqdm(enumerate(val_iter))\n",
+    "    for idx, (src, tgt) in pbar:\n",
+    "        src = src.to(device)\n",
+    "        tgt = tgt.to(device)\n",
+    "        \n",
+    "        tgt_inp = tgt[:,:-1]      # give input until before the last word.\n",
+    "        \n",
+    "        src_mask, tgt_mask = create_mask(src,tgt)\n",
+    "        \n",
+    "        logits = model(src, tgt, src_mask, tgt_mask)\n",
+    "\n",
+    "        loss = loss_fn(logits.reshape(-1, logits.size(-1)), tgt_out.reshape(-1))\n",
+    "        \n",
+    "        losses+= loss.item()\n",
+    "        pbar.set_postfix({'Loss': f\"{losses/len(train_iter):.3f}\"})\n",
+    "    return losses/len(val_iter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e77b3bf-ba3f-4ae7-b49b-d2ba919d5abb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3f09897b1dfe45a1ab825ff6ddd0df69",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "for epoch in range(1, NUM_EPOCHS):\n",
+    "    train_loss = train_epoch(model, train_iter, optimizer)\n",
+    "    val_loss = evaluate(model, valid_iter)\n",
+    "    print(f\"Epoch: {epoch}, Train loss: {train_loss:.3f}, Val loss: {val_loss:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bb0a9e7-5e8a-4172-ba54-388e892fd9be",
    "metadata": {},
    "outputs": [],
    "source": []
