fixed tgt_inp, added pbar

--- a/Transformers.ipynb
+++ b/Transformers.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "id": "c88d8d4b",
    "metadata": {
     "scrolled": true
@@ -48,16 +48,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3.9/site-packages/torch/cuda/__init__.py:52: UserWarning: CUDA initialization: CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero. (Triggered internally at  /pytorch/c10/cuda/CUDAFunctions.cpp:109.)\n",
-      "  return torch._C._cuda_getDeviceCount() > 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\""
    ]
@@ -354,6 +345,7 @@
     "        x = self.embedding(x)               # [B, seq_len, d_model]\n",
     "        x = x * (self.d_model**0.5)\n",
     "        x = x + self.pos_enc[:,:seq_len]\n",
+    "        # dropout ?\n",
     "        for lyr in self.enc_layers:\n",
     "            x = lyr(x, src_mask)\n",
     "        return x"
@@ -383,6 +375,7 @@
     "        x = self.embedding(x)              # [B, seq_len, d_model]\n",
     "        x = x * (self.d_model**0.5)\n",
     "        x = x + self.pos_enc[:,:seq_len]\n",
+    "        # dropout ?\n",
     "        for lyr in self.dec_layers:\n",
     "            x = lyr(x, enc_output, src_mask, tgt_mask)\n",
     "        return x"
@@ -633,7 +626,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BATCH_SIZE = 128\n",
     "PAD_IDX = de_vocab['<pad>']\n",
     "BOS_IDX = de_vocab['<bos>']\n",
     "EOS_IDX = de_vocab['<eos>']"
@@ -709,6 +701,16 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "78d0b07b-68f8-4169-b415-bc5999b6ebeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "9d6e4641-d327-452f-8c68-5ce4c2dca152",
    "metadata": {},
    "outputs": [],
@@ -720,33 +722,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "f72f49fa-3704-4394-a7c7-bdbbfe947810",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a,b = next(iter(train_iter))"
+    "# a,b = next(iter(train_iter))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "1eceb126-3f81-4700-9989-835800f4cf46",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(torch.Size([128, 26]), torch.Size([128, 28]))"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a.shape, b.shape"
+    "# a.shape, b.shape     # [B, seq_len]"
    ]
   },
   {
@@ -759,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "id": "9dd0f4c7-a23d-4c85-b4b8-2db60cfbfbb7",
    "metadata": {},
    "outputs": [],
@@ -791,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 38,
    "id": "ec46be21-af2f-45d1-aca2-9eb4bc94f404",
    "metadata": {},
    "outputs": [],
@@ -811,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "id": "bbfc74f2-3966-4542-b381-1fc873c5b6a7",
    "metadata": {},
    "outputs": [],
@@ -823,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "id": "130a0b2c-784b-4a98-86cc-9f90c8861b70",
    "metadata": {},
    "outputs": [],
@@ -837,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 41,
    "id": "edf280d2-571c-465f-967b-cd55f51994dd",
    "metadata": {},
    "outputs": [],
@@ -845,7 +836,7 @@
     "def train_epoch(model, train_iter, optimizer):\n",
     "    model.train()\n",
     "    losses = 0\n",
-    "    pbar = tqdm(enumerate(train_iter))\n",
+    "    pbar = tqdm(enumerate(train_iter), total=len(train_iter))\n",
     "    for idx, (src, tgt) in pbar:\n",
     "        src = src.to(device)\n",
     "        tgt = tgt.to(device)\n",
@@ -853,9 +844,9 @@
     "        tgt_inp = tgt[:,:-1]      # give input until before the last word.\n",
     "        tgt_out = tgt[:,1:]       # predict the last word based on input and already predicted sentence. (auto-regressive)\n",
     "        \n",
-    "        src_mask, tgt_mask = create_mask(src,tgt)\n",
+    "        src_mask, tgt_mask = create_mask(src, tgt_inp)\n",
     "        \n",
-    "        logits = model(src, tgt, src_mask, tgt_mask)\n",
+    "        logits = model(src, tgt_inp, src_mask, tgt_mask)\n",
     "\n",
     "        optimizer.zero_grad()\n",
     "        loss = loss_fn(logits.reshape(-1, logits.size(-1)), tgt_out.reshape(-1))\n",
@@ -863,13 +854,13 @@
     "        optimizer.step()\n",
     "        \n",
     "        losses+= loss.item()\n",
-    "        pbar.set_postfix({'Loss': f\"{losses/len(train_iter):.3f}\"})\n",
+    "        pbar.set_postfix({'Loss': f\"{losses/(idx+1):.3f}\"})\n",
     "    return losses/len(train_iter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 42,
    "id": "283d2cb0-81c1-4555-8944-d2e9e06dde7c",
    "metadata": {},
    "outputs": [],
@@ -877,21 +868,21 @@
     "def evaluate(model, val_iter):\n",
     "    model.eval()\n",
     "    losses = 0\n",
-    "    pbar = tqdm(enumerate(val_iter))\n",
+    "    pbar = tqdm(enumerate(val_iter), total=len(val_iter))\n",
     "    for idx, (src, tgt) in pbar:\n",
     "        src = src.to(device)\n",
     "        tgt = tgt.to(device)\n",
     "        \n",
     "        tgt_inp = tgt[:,:-1]      # give input until before the last word.\n",
     "        \n",
-    "        src_mask, tgt_mask = create_mask(src,tgt)\n",
+    "        src_mask, tgt_mask = create_mask(src, tgt_inp)\n",
     "        \n",
-    "        logits = model(src, tgt, src_mask, tgt_mask)\n",
+    "        logits = model(src, tgt_inp, src_mask, tgt_mask)\n",
     "\n",
     "        loss = loss_fn(logits.reshape(-1, logits.size(-1)), tgt_out.reshape(-1))\n",
     "        \n",
     "        losses+= loss.item()\n",
-    "        pbar.set_postfix({'Loss': f\"{losses/len(train_iter):.3f}\"})\n",
+    "        pbar.set_postfix({'Loss': f\"{losses/(idx+1):.3f}\"})\n",
     "    return losses/len(val_iter)"
    ]
   },
@@ -904,12 +895,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f09897b1dfe45a1ab825ff6ddd0df69",
+       "model_id": "8e11eac84cd1468481035d0c3ebdee9e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "0it [00:00, ?it/s]"
+       "  0%|          | 0/907 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -927,6 +918,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7bb0a9e7-5e8a-4172-ba54-388e892fd9be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81cef717-fdc0-40f3-adc9-71f1e54c044c",
    "metadata": {},
    "outputs": [],
    "source": []
