--- a/Transformers.ipynb
+++ b/Transformers.ipynb
@@ -715,9 +715,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_iter = DataLoader(train_data, batch_size=BATCH_SIZE, shuffle=True, collate_fn=generate_batch)\n",
-    "valid_iter = DataLoader(val_data,   batch_size=BATCH_SIZE, shuffle=True, collate_fn=generate_batch)\n",
-    "test_iter  = DataLoader(test_data,  batch_size=BATCH_SIZE, shuffle=True, collate_fn=generate_batch)"
+    "train_iter = DataLoader(train_data, batch_size=BATCH_SIZE, shuffle=True, collate_fn=generate_batch, num_workers=4)\n",
+    "valid_iter = DataLoader(val_data,   batch_size=BATCH_SIZE, shuffle=True, collate_fn=generate_batch, num_workers=4)\n",
+    "test_iter  = DataLoader(test_data,  batch_size=BATCH_SIZE, shuffle=True, collate_fn=generate_batch, num_workers=4)"
    ]
   },
   {
@@ -833,10 +833,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_epoch(model, train_iter, optimizer):\n",
+    "def train_epoch(model, train_iter, optimizer, desc=\"Epoch\"):\n",
     "    model.train()\n",
     "    losses = 0\n",
-    "    pbar = tqdm(enumerate(train_iter), total=len(train_iter))\n",
+    "    pbar = tqdm(enumerate(train_iter), total=len(train_iter), desc=desc)\n",
     "    for idx, (src, tgt) in pbar:\n",
     "        src = src.to(device)\n",
     "        tgt = tgt.to(device)\n",
@@ -855,6 +855,7 @@
     "        \n",
     "        losses+= loss.item()\n",
     "        pbar.set_postfix({'Loss': f\"{losses/(idx+1):.3f}\"})\n",
+    "    pbar.close()\n",
     "    return losses/len(train_iter)"
    ]
   },
@@ -865,16 +866,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate(model, val_iter):\n",
+    "def evaluate(model, val_iter, desc=\"Evaluating\"):\n",
     "    model.eval()\n",
     "    losses = 0\n",
-    "    pbar = tqdm(enumerate(val_iter), total=len(val_iter))\n",
+    "    pbar = tqdm(enumerate(val_iter), total=len(val_iter), desc=desc)\n",
     "    for idx, (src, tgt) in pbar:\n",
     "        src = src.to(device)\n",
     "        tgt = tgt.to(device)\n",
     "        \n",
     "        tgt_inp = tgt[:,:-1]      # give input until before the last word.\n",
-    "        \n",
+    "        tgt_out = tgt[:,1:]       # predict the last word based on input and already predicted sentence. (auto-regressive)\n",
+    "\n",
     "        src_mask, tgt_mask = create_mask(src, tgt_inp)\n",
     "        \n",
     "        logits = model(src, tgt_inp, src_mask, tgt_mask)\n",
@@ -883,6 +885,7 @@
     "        \n",
     "        losses+= loss.item()\n",
     "        pbar.set_postfix({'Loss': f\"{losses/(idx+1):.3f}\"})\n",
+    "    pbar.close()\n",
     "    return losses/len(val_iter)"
    ]
   },
@@ -895,12 +898,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e11eac84cd1468481035d0c3ebdee9e",
+       "model_id": "d31a07b61de44b92bbc012f57ace32e0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/907 [00:00<?, ?it/s]"
+       "Epoch 1:   0%|          | 0/907 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -909,7 +912,7 @@
    ],
    "source": [
     "for epoch in range(1, NUM_EPOCHS):\n",
-    "    train_loss = train_epoch(model, train_iter, optimizer)\n",
+    "    train_loss = train_epoch(model, train_iter, optimizer, desc=f\"Epoch {epoch}\")\n",
     "    val_loss = evaluate(model, valid_iter)\n",
     "    print(f\"Epoch: {epoch}, Train loss: {train_loss:.3f}, Val loss: {val_loss:.3f}\")"
    ]
