--- a/Transformers.ipynb
+++ b/Transformers.ipynb
@@ -412,92 +412,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "e33ad17b",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# src = torch.randint(0,200,(4,68)).to(device)\n",
-    "# tgt = torch.randint(0,200,(4,60)).to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "bdbf2c1c",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# model = Transformer(4000, 3000).to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "b0874623-c80f-45aa-8674-515ee01ec33a",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# o = model(src, tgt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "c6fe5108-359e-44fc-8ee2-e7cdd7641c45",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# o.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "20f08630-f615-40fc-8fdf-e4e2af1df10c",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# from torch.utils.tensorboard import SummaryWriter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "567a8d71-637b-42b2-89cf-65a6b4002d64",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# writer = SummaryWriter(run.dir+'/tensorboard_logs/custom_transformer')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "ca049e4c-3ed5-474b-b4fc-bd4b4dee53fe",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# writer.add_graph(model, (src,tgt))\n",
-    "# writer.close()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e533ae4b-50cb-4047-8452-25e2b1bb6f6a",
    "metadata": {},
@@ -914,6 +828,47 @@
    ],
    "source": [
     "wandb.watch(model, criterion=loss_fn, log=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "20f08630-f615-40fc-8fdf-e4e2af1df10c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from torch.utils.tensorboard import SummaryWriter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "567a8d71-637b-42b2-89cf-65a6b4002d64",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "writer = SummaryWriter(run.dir+'/tensorboard_logs/custom_transformer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ca049e4c-3ed5-474b-b4fc-bd4b4dee53fe",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "src, tgt = next(iter(train_iter))\n",
+    "src = src.to(device)\n",
+    "tgt = tgt.to(device)\n",
+    "writer.add_graph(model, (src, tgt))\n",
+    "writer.close()\n",
+    "del src, tgt"
    ]
   },
   {
