--- a/Basic_Transformers.ipynb
+++ b/Basic_Transformers.ipynb
@@ -124,7 +124,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm.notebook import tqdm\n",
+    "from tqdm.auto import tqdm\n",
     "from collections import OrderedDict"
    ]
   },
