--- a/Basic_Transformers.ipynb
+++ b/Basic_Transformers.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e530b985-a992-4ac8-b65e-793e08ed0f62",
+   "metadata": {},
+   "source": [
+    "# Implementing Transformer in Pytorch\n",
+    "> A basic implementation of Transformer in Pytorch for language translation.\n",
+    "\n",
+    "- toc: true \n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [Python, NLP, Deep Learning, Transformer, Pytorch]\n",
+    "- hide: false\n",
+    "- image: https://www.tensorflow.org/images/tutorials/transformer/transformer.png"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "l5tKOBF6HuH2",
    "metadata": {
     "colab": {
@@ -16,16 +32,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Jun 14 21:57:32 2021       \n",
+      "Sat Jun 19 20:35:40 2021       \n",
       "+-----------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 465.27       Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
+      "| NVIDIA-SMI 465.31       Driver Version: 465.31       CUDA Version: 11.3     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
       "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
       "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
-      "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-      "| N/A   35C    P8     9W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+      "|   0  NVIDIA GeForce ...  Off  | 00000000:03:00.0 Off |                  N/A |\n",
+      "| N/A   43C    P8    N/A /  N/A |      3MiB /  2004MiB |      0%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -34,12 +50,13 @@
       "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
-      "|  No running processes found                                                 |\n",
+      "|    0   N/A  N/A       468      G   /usr/lib/Xorg                       2MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
    ],
    "source": [
+    "#hide\n",
     "!nvidia-smi"
    ]
   },
@@ -67,8 +84,8 @@
     }
    ],
    "source": [
-    "# !spacy download de_core_news_sm -q\n",
-    "# !spacy download en_core_web_sm -q"
+    "!spacy download de_core_news_sm -q\n",
+    "!spacy download en_core_web_sm -q"
    ]
   },
   {
@@ -80,26 +97,12 @@
    },
    "outputs": [],
    "source": [
-    "# %pip install -q wandb"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a307e59e-a9ba-4f2d-8e45-a5f7834c7e55",
-   "metadata": {
-    "id": "a307e59e-a9ba-4f2d-8e45-a5f7834c7e55"
-   },
-   "source": [
-    "# References\n",
-    "- https://www.tensorflow.org/text/tutorials/transformer\n",
-    "- https://pytorch.org/tutorials/beginner/translation_tansformer.html\n",
-    "- https://pytorch.org/docs/stable/generated/torch.nn.Transformer.html\n",
-    "- https://arxiv.org/abs/1706.03762"
+    "%pip install -q wandb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2b0f3187",
    "metadata": {
     "id": "2b0f3187",
@@ -114,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c88d8d4b",
    "metadata": {
     "id": "c88d8d4b",
@@ -142,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b41e8987",
    "metadata": {
     "id": "b41e8987",
@@ -171,13 +174,13 @@
     "tags": []
    },
    "source": [
-    "$\\begin{equation*}\\Large\n",
+    "$\\Large\n",
     "PE_{(pos,2i)} = sin\\left(\\frac{pos}{10000^{\\frac{2i}{d_{model}}}}\\right)\n",
-    "\\end{equation*}$\n",
+    "$\n",
     "\n",
-    "$\\begin{equation*}\\Large\n",
+    "$\\Large\n",
     "PE_{(pos,2i+1)} = cos\\left(\\frac{pos}{10000^{\\frac{2i}{d_{model}}}}\\right)\n",
-    "\\end{equation*}$"
+    "$"
    ]
   },
   {
@@ -266,9 +269,9 @@
     "id": "d55f843f"
    },
    "source": [
-    "$\\begin{equation*}\\Large\n",
+    "$\\Large\n",
     "Attention(Q,K,V) = softmax\\left(\\frac{QK^{T}}{\\sqrt{d_k}}\\right)V\n",
-    "\\end{equation*}$"
+    "$"
    ]
   },
   {
@@ -592,36 +595,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebc90d83-7045-4ebb-ba43-6683cfd4632e",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "ebc90d83-7045-4ebb-ba43-6683cfd4632e",
-    "outputId": "a2623378-0dc8-41a7-9ef5-620f1e603a9c",
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/content/.data/train.de', '/content/.data/train.en']"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {
-      "tags": []
-     },
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_filepaths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4f423660-860c-444a-8c89-162e3d3f3fb6",
    "metadata": {
     "id": "4f423660-860c-444a-8c89-162e3d3f3fb6",
@@ -814,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "9dd0f4c7-a23d-4c85-b4b8-2db60cfbfbb7",
    "metadata": {
     "id": "9dd0f4c7-a23d-4c85-b4b8-2db60cfbfbb7"
@@ -822,8 +795,7 @@
    "outputs": [],
    "source": [
     "def subsequent_mask(sz):\n",
-    "    mask = torch.ones((1,1,sz,sz), device=device, dtype=bool).tril()\n",
-    "    mask.logical_not_()\n",
+    "    mask = torch.ones((1,1,sz,sz), device=device, dtype=bool).triu(1)\n",
     "    return mask\n",
     "\n",
     "def mask_fill_inf(mask):\n",
@@ -896,6 +868,7 @@
    },
    "outputs": [],
    "source": [
+    "#hide\n",
     "# run = wandb.init(id='352vnm9l', project=\"Basic_Transformer\", resume='must')\n",
     "# CONFIG = run.config"
    ]
@@ -1096,6 +1069,7 @@
     }
    ],
    "source": [
+    "#hide_output\n",
     "wandb.watch(model, log=None)"
    ]
   },
@@ -1209,6 +1183,7 @@
    },
    "outputs": [],
    "source": [
+    "#hide\n",
     "# save_model(model, optimizer, init_epoch)"
    ]
   },
@@ -1221,6 +1196,7 @@
    },
    "outputs": [],
    "source": [
+    "#hide\n",
     "# wandb.save(\"*.pth\")"
    ]
   },
@@ -1233,6 +1209,7 @@
    },
    "outputs": [],
    "source": [
+    "#hide\n",
     "# checkpoint = torch.load(run.dir + '/model.pth')\n",
     "# model.load_state_dict(checkpoint['model_state_dict'])\n",
     "# optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
@@ -1241,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ocP0VLBPt-jl",
    "metadata": {
     "id": "ocP0VLBPt-jl"
@@ -1582,8 +1559,13 @@
       "8fa96a2030254c0d8519e0dff56d5c09"
      ]
     },
+    "collapsed": true,
     "id": "6M31NdP-k2iv",
-    "outputId": "760182ac-f4fe-4e4d-f6c1-75ed3982715d"
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "outputId": "760182ac-f4fe-4e4d-f6c1-75ed3982715d",
+    "tags": []
    },
    "outputs": [
     {
@@ -2548,6 +2530,7 @@
     }
    ],
    "source": [
+    "#collapse-output\n",
     "for epoch in range(init_epoch, NUM_EPOCHS+1):\n",
     "    train_loss = train_epoch(model, train_iter, optimizer, scaler, scheduler,\n",
     "                             epoch, CONFIG['use_amp'], CONFIG['log_interval'])\n",
@@ -2567,6 +2550,7 @@
    },
    "outputs": [],
    "source": [
+    "#hide\n",
     "init_epoch = epoch"
    ]
   },
@@ -2798,14 +2782,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "MABRMBQbVbfq",
+   "cell_type": "markdown",
+   "id": "00a154c0-3d64-450e-8121-21a73af126bf",
    "metadata": {
-    "id": "MABRMBQbVbfq"
+    "id": "a307e59e-a9ba-4f2d-8e45-a5f7834c7e55"
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# References\n",
+    "- https://www.tensorflow.org/text/tutorials/transformer\n",
+    "- https://pytorch.org/tutorials/beginner/translation_tansformer.html\n",
+    "- https://pytorch.org/docs/stable/generated/torch.nn.Transformer.html\n",
+    "- https://arxiv.org/abs/1706.03762"
+   ]
   }
  ],
  "metadata": {
